(lang dune 2.9)
(name ut)
(version 0.1)
(generate_opam_files true)
(license MIT)
(maintainers "Hyeonung Baek <wiserlix@gmail.com>")
(authors "Hyeonung Baek <wiserlix@gmail.com>")
(homepage "https://github.com/wiserlix/ut")
(bug_reports "https://github.com/wiserlix/ut/issues")

(package
  (name ut)
  (synopsis "Utilities for problem-solving")
  (depends (ocaml (>= 4.12))))
